# cloud-computing-path

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  api-docs.md  compose.yaml  pyproject.toml  test.sh
.github/workflows/: bruno.yaml  docker-image.yaml
app/: database.py  main.py  script.py
app/core/: config.py
app/lang/: id.py
app/models/: news.py  store.py  user.py
app/schemas/: model_schema.py  response_schema.py
app/utils/: response.py  utils.py
bruno/: bruno.json  collection.bru
bruno/Auth/: Edit password with invalid token.bru  Edit password.bru  Edit photo profile with invalid credentials.bru  Edit photo profile.bru  Edit profile with invalid credentials.bru  Edit profile with partial data.bru  Edit profile.bru  Get profile with invalid credentials.bru  Get profile.bru  Login with invalid Invalid credentials.bru  Login without data.bru  Login.bru  Register user with invalid data.bru  Register user without data.bru  Register user.bru
bruno/News/: Create new news 2.bru  Create new news 3.bru  Create new news with invalid file type.bru  Create new news without token.bru  Create new news.bru  Delete news by id 2.bru  Delete news by id 3.bru  Delete news by id without token.bru  Delete news by id.bru  Delete news by invalid id.bru  Get news by id.bru  Get news by invalid id.bru  Get news list based on user token.bru  Get news list.bru  Get news with parameter.bru  Update news with invalid image.bru  Update news with invalid poster.bru  Update news without token.bru  Update news.bru
bruno/OCR/: Censored KTP Address.bru  Censored KTP Name.bru  Invalid KTP.bru  KTP 1.bru  KTP 2.bru  KTP without token.bru  Truncated KTP Address.bru  Truncated KTP NIK.bru
bruno/Store/: Create new store with invalid data.bru  Create new store with invalid file type.bru  Create new store without data.bru  Create new store without token.bru  Create new store.bru  Delete store that does not exist.bru  Delete store.bru  Find 1 store that does not exist.bru  Find 1 store.bru  Find store by id.bru  Find store list with token.bru  Get store list.bru  Update store that does not exist.bru  Update store with invalid format.bru  Update store with no authorized token.bru  Update store without token.bru  Update store.bru
bruno/User/: Delete user that does not exist.bru  Delete user.bru  Find 1 user that does not exist.bru  Find 1 user.bru  Find user from that does not valid credentials.bru  Find user from token.bru  (+5 more)
(+13 files in other folders)
