[tool.poetry]
name = "borwita-api"
version = "0.1.0"
description = ""
authors = []
[[tool.poetry.packages]]
include = "app"

[tool.poetry.scripts]
start = "app.main:start"

[tool.black]
line-length = 88
target-version = [ "py37", "py38", "py39", "py310", "py311", "py312"]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.ruff]
line-length = 88
exclude = [ ".git", "__pycache__", ".mypy_cache", ".pytest_cache",]
select = [ "E", "W", "F", "C", "B",]
ignore = [ "B904", "B006", "E501", "B008", "C901",]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [ "alembic", "__pycache__",]

[tool.build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
asyncer = "^0.0.8"
pydantic-settings = "^2.6.1"
fastapi = {extras = ["standart"], version = "^0.115.4"}
uvicorn = "^0.32.0"
sqlmodel = "^0.0.22"
passlib = "^1.7.4"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"

[tool.ruff.per-file-ignores]
"__init__.py" = [ "F401",]
