[tool.poetry]
name = "borwita-api"
version = "0.1.0"
description = ""
authors = []
[[tool.poetry.packages]]
include = "app"

[tool.poetry.scripts]
start = "app.main:start"

[tool.black]
line-length = 88
target-version = [ "py37", "py38", "py39", "py310", "py311", "py312"]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.ruff]
line-length = 88
exclude = [ ".git", "__pycache__", ".mypy_cache", ".pytest_cache",]
select = [ "E", "W", "F", "C", "B",]
ignore = [ "B904", "B006", "E501", "B008", "C901",]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [ "alembic", "__pycache__",]

[tool.build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
asyncer = "^0.0.8"
pydantic-settings = "^2.6.1"
fastapi = {extras = ["standart"], version = "^0.115.4"}
uvicorn = "^0.32.0"
sqlmodel = "^0.0.22"
bcrypt = "3.2.0"
python-multipart = "^0.0.17"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-extra-types = {extras = ["latitude"], version = "^2.10.0"}
ultralytics = "^8.3.38"
tensorflow = "^2.18.0"
imutils = "^0.5.4"
opencv-python-headless = "^4.10.0.84"
regex = "^2024.11.6"

[tool.ruff.per-file-ignores]
"__init__.py" = [ "F401",]
